<resources>
    <string name="app_name">Test Android Developer</string>
    <string name="title_home">Home</string>
    <string name="title_popular">Popular</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_location">Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="popular_movie">Popular Movie</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="baseUrlImage">http://image.tmdb.org/t/p/w500%s</string>
    <string name="movie_overvie">Movie Overvie</string>
    <string name="search_hint">Search</string>
    <string name="release_date">Release Date</string>
    <string name="remove_fav">- Remove From Favorite</string>
    <string name="add_fav">+ Add To Favorite</string>
    <string name="score">Score</string>
    <string name="your_currnet_location">Your Currnet Location</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
</resources>