<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/img_movie"
        android:layout_width="120dp"
        android:layout_height="190dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/baseUrlImage" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_popular"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/img_movie"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/img_movie"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/movie_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_overvie"
        android:textColor="@color/white"
        android:maxLines="2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/img_movie"
        app:layout_constraintTop_toBottomOf="@+id/release_date" />

    <ImageView
        android:id="@+id/img_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/baseUrlImage" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/img_movie"
        app:layout_constraintEnd_toEndOf="@+id/img_movie"
        app:layout_constraintStart_toStartOf="@+id/img_movie"
        app:layout_constraintTop_toTopOf="@+id/img_movie" />

</androidx.constraintlayout.widget.ConstraintLayout>