<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:foreground="@drawable/gradiant_image_view"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute"
            android:contentDescription="@string/baseUrlImage" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal"
            android:background="@drawable/ic_baseline_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/baseUrlImage" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/title_popular"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/movieScore"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_fav"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/img_poster"
        app:layout_constraintEnd_toEndOf="@+id/img_poster"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/movieScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/white"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/move_date"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/move_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:layout_marginStart="15dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/fav_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/movie_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_popular"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_poster" />

</androidx.constraintlayout.widget.ConstraintLayout>